--- a/css/style.css
+++ b/css/style.css
@@ -62,11 +62,11 @@ h6{
 
 .nav-menu{
     width: 60px;
-    height:100%;
     background-color: #f8f6f6;
     position: fixed;
     top: 0px;
-    left: 0px; /* 240 */
+    left: 0px;
+    bottom: 0px;
     text-align: center;
     transition: all 0.6s ease-in-out;
     z-index: 999999;
@@ -95,11 +95,11 @@ h6{
     position: fixed;
     top: 0px;
     left: -240px; 
+    bottom: 0px;
     z-index: 999999;
     text-align: left;
     transition: all 0.6s ease-in-out;
     width: 240px;
-    height:100%;
 }
 .dark-menu-nav a{
     color: white;
